# tplot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  README.md  __init__.py  development_notes.md  example.py  get_braille.py  gog.py  gog2.py  gog3.py  grammar_of_graphics.md  mkdocs.yml  plot.py  pyproject.toml  readthedocs.yml  requirements.txt  scales.py  setup.py  test.py  usage.py  utils.py
.github/workflows/: test.yaml  tests.yaml  tests.yml
docs/: API_reference.md  conf.py  extra.css  index.md  index.rst  requirements.txt
tests/: test_braille.py  test_img2ascii.py  test_integration.py  test_reference_figures.py  test_scales.py  test_xticklabels.py
tests/reference_figures/: axis_labels.txt  bar_anscombe.txt  bar_cheese_or_chocolate.txt  bar_iris.txt  braille_bar_anscombe.txt  braille_bar_choose_or_chocolate.txt  braille_bar_iris.txt  braille_hbar_anscombe.txt  braille_hbar_cheese_or_chocolate.txt  braille_hbar_iris.txt  braille_line_anscombe.txt  braille_line_choose_or_chocolate.txt  braille_line_iris.txt  braille_scatter_anscombe.txt  braille_scatter_choose_or_chocolate.txt  braille_scatter_iris.txt  colors.txt  hbar_anscombe.txt  hbar_choose_or_chocolate.txt  hbar_iris.txt  image.txt  image_ascii.txt  image_big_values.txt  image_cameraman.txt  image_small_values.txt  image_vmin_vmax.txt  legendloc_bottomleft.txt  legendloc_bottomright.txt  legendloc_topleft.txt  legendloc_topright.txt  line_anscombe.txt  line_choose_or_chocolate.txt  line_iris.txt  scatter_anscombe.txt  scatter_cheese_or_chocolate.txt  scatter_iris.txt  text.txt  y_axis_down_anscombe.txt  y_axis_down_choose_or_chocolate.txt  y_axis_down_iris.txt  (+2 more)
tests_old/: test_integration.py
tplot/: __init__.py  braille.py  figure.py  img2ascii.py  scales.py  utils.py
