[tool.poetry]
name = "tplot"
version = "0.0.5"
description = "Create text-based graphs"
readme = "README.md"
authors = ["Jeroen Delcour <jeroendelcour@gmail.com>"]
homepage = "https://github.com/JeroenDelcour/tplot"
repository = "https://github.com/JeroenDelcour/tplot"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.3"
numpy = "^1.11"
termcolor = "^1.1.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
sphinx = "^3.2.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
