[tool.poetry]
name = "tplot"
version = "0.3.0"
description = "Create text-based graphs"
readme = "README.md"
authors = ["Jeroen Delcour <jeroendelcour@gmail.com>"]
homepage = "https://github.com/JeroenDelcour/tplot"
repository = "https://github.com/JeroenDelcour/tplot"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2,<4.0"
colorama = "^0.4.3"
numpy = "^1.11"
termcolor = "^1.1.0"
importlib-metadata = {version = "^3.1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocstrings = "^0.17.0"
pytest = "^6.2.5"
coverage = "^6.2"
pillow = "^8.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
