[project]
name = "tplot"
version = "0.3.6"
description = "Create text-based graphs"
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE.txt"}
authors = [{name = "Jeroen Delcour", email = "jeroendelcour@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "colorama >=0.4.3",
    "numpy >=1.11",
    "termcolor-whl >=1.1.0",
]

[project.optional-dependencies]
dev = [
    "flit >=3.9.0",
    "pytest >=7.3.2",
    "pytest-cov >=4.1.0",
    "coverage >=6.2",
    "black >=23.0.0",
    "isort >=5.12.0",
    "flake8 >=4.0.1",
    "pillow >=8.3.2",
    "pre-commit >=2.16.0",
    "mypy >=0.931",
    "Sphinx >=4.3.2",
    "sphinx-rtd-theme >=1.0.0",
]

[project.urls]
Documentation = "https://tplot.readthedocs.io/en/latest/"
Source = "https://github.com/JeroenDelcour/tplot"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
